[package]
name = "keyv"
version = "0.2.1"
authors = ["Christian Llontop <chrisllontop@icloud.com>"]
edition = "2021"
description = "Simple key-value storage with support for multiple backends"
keywords = ["key-value", "cache", "store", "storage", "async"]
repository = "https://github.com/chrisllontop/keyv-rust"
documentation = "https://docs.rs/keyv"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.36", features = ["full"] }
serde = "1.0"
serde_json = "1.0"
async-trait = { version = "0.1", features = [] }
thiserror = "1.0.59"
sqlx = { version = "0.7.4", optional = true }
log = "0.4.21"
redis = { version = "0.25.3", optional = true }
mongodb = { version = "2.8.2", optional = true }

[dev-dependencies]
cargo-tarpaulin = "0.30.0"

[package.metadata.tarpaulin]
report = "json"

[features]
postgres = ["sqlx/postgres", "sqlx/runtime-tokio-rustls"]
mysql = ["sqlx/mysql", "sqlx/runtime-tokio-rustls"]
sqlite = ["sqlx/sqlite", "sqlx/runtime-tokio-native-tls"]  # Add this line
redis = ["dep:redis"]
mongo = ["mongodb"]
full = ["postgres", "mysql", "sqlite", "redis", "mongo"]
default = []
