[package]
name = "keyv-postgres"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
keyv = { path = "../keyv" }
tokio = { version = "1.36", features = ["full"] }
serde = "1.0"
serde_json = "1.0"
async-trait = { version = "0.1", features = [] }
thiserror = "1.0.58"
sqlx = { version = "0.6", features = ["postgres", "runtime-tokio-rustls"] }
log = "0.4.21"
