[package]
name = "keyv-redis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
redis = "0.23.0"
async-trait = "0.1.50"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4.21"
tokio = { version = "1.36", features = ["full"] }
keyv = { path = "../keyv" }
