[package]
name = "keyv"
version = "0.0.2-alpha.1"
authors = ["Christian Llontop <chrisllontop@icloud.com>"]
edition = "2021"
description = "Simple key-value storage with support for multiple backends"
readme = "../../README.md"
repository = "https://github.com/christianllv/keyv-rust"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.37", features = ["full"] }
serde = "1.0"
serde_json = "1.0"
async-trait = { version = "0.1", features = [] }